--- a/docs/tutorials/long-range-entanglement-with-limited-qubit-connectivity.ipynb
+++ b/docs/tutorials/long-range-entanglement-with-limited-qubit-connectivity.ipynb
@@ -39,8 +39,8 @@
     "\n",
     "Before starting this tutorial, ensure that you have the following installed:\n",
     "\n",
-    "- Qiskit SDK 1.0 or later, with visualization support ( `pip install 'qiskit[visualization]'` )\n",
-    "- Qiskit Runtime ( `pip install qiskit-ibm-runtime` ) 0.22 or later"
+    "- Qiskit SDK 2.0 or later, with visualization support ( `pip install 'qiskit[visualization]'` )\n",
+    "- Qiskit Runtime ( `pip install qiskit-ibm-runtime` ) 0.37 or later"
    ]
   },
   {
@@ -185,7 +185,7 @@
     "            )\n",
     "            path.append(next_qubit)\n",
     "\n",
-    "    # Now repeat the random search many times to find a long line\n",
+    "    # Now repeat the random walk many times to find a long line\n",
     "    return max(\n",
     "        [get_random_line(coupling_map, start_qubit) for _ in range(1000)],\n",
     "        key=lambda x: len(x),\n",
@@ -241,22 +241,21 @@
    ],
    "source": [
     "def coupling_map_from_qubit_line(\n",
-    "    coupling_map: List[List[int]], qubit_line: List[List[int]]\n",
-    ") -> List[List[int]]:\n",
+    "    coupling_map: CouplingMap, qubit_line: List[List[int]]\n",
+    ") -> CouplingMap:\n",
     "    \"\"\"\n",
     "    Modify the full coupling map to force linearity in the qubit layout\n",
     "    \"\"\"\n",
     "    new_coupling_map = []\n",
-    "    line_edge_list = []\n",
-    "    for i in range(len(qubit_line) - 1):\n",
-    "        line_edge_list.append([qubit_line[i], qubit_line[i + 1]])\n",
-    "\n",
-    "    for edge in coupling_map:\n",
-    "        u, v = edge\n",
-    "        edge_rev = [v, u]\n",
-    "        if (edge in line_edge_list) or (edge_rev in line_edge_list):\n",
-    "            new_coupling_map.append(edge)\n",
-    "    return new_coupling_map\n",
+    "    # Iterate the line pair-wise and append edges that contain both qubits\n",
+    "    for qubit, next_qubit in zip(qubit_line, qubit_line[1:]):\n",
+    "        edge = next(\n",
+    "            edge\n",
+    "            for edge in coupling_map.get_edges()\n",
+    "            if qubit in edge and next_qubit in edge\n",
+    "        )\n",
+    "        new_coupling_map.append(edge)\n",
+    "    return CouplingMap(new_coupling_map)\n",
     "\n",
     "\n",
     "# Set up access to IBM Quantum devices\n",
@@ -265,28 +264,20 @@
     "    operational=True, simulator=False, min_num_qubits=127\n",
     ")\n",
     "\n",
-    "# Set which quantum computer to use\n",
-    "MACHINE_NAME = backend.name\n",
-    "\n",
     "# Set qubit line and coupling map\n",
     "QUBIT_LINE = get_1d_qubit_line(backend.coupling_map)\n",
-    "print(f\"Found line of length {len(QUBIT_LINE)}:\")\n",
-    "COUPLING_MAP_FULL = [\n",
-    "    list(edge)\n",
-    "    for edge in list(\n",
-    "        QiskitRuntimeService().backend(MACHINE_NAME).coupling_map\n",
-    "    )\n",
-    "]\n",
-    "COUPLING_MAP_1D = coupling_map_from_qubit_line(COUPLING_MAP_FULL, QUBIT_LINE)\n",
+    "COUPLING_MAP_1D = coupling_map_from_qubit_line(backend.coupling_map, QUBIT_LINE)\n",
     "MAX_POSSIBLE_QUBITS_BTW_CNOT = len(QUBIT_LINE) - 2\n",
     "\n",
     "# Use this duration class to get appropriate durations for dynamic\n",
     "# circuit backend scheduling\n",
     "DURATIONS = DynamicCircuitInstructionDurations.from_backend(backend)\n",
     "\n",
-    "print(f\"Machine is set to: {MACHINE_NAME}\")\n",
+    "print(f\"Backend is: {backend.name}\")\n",
+    "print(f\"Found line of length {len(QUBIT_LINE)}.\")\n",
+    "print(\"Using coupling map:\\n\", COUPLING_MAP_1D)\n",
     "print(\n",
-    "    f\"Maximum number of qubits between CNOT for {MACHINE_NAME} is {MAX_POSSIBLE_QUBITS_BTW_CNOT} with the given qubit line.\"\n",
+    "    f\"Maximum number of qubits between CNOT for {backend.name} is {MAX_POSSIBLE_QUBITS_BTW_CNOT} with the given qubit line.\"\n",
     ")"
    ]
   },
@@ -305,7 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set which Pauli's to sample (default is all 16 combinations that have a non-zero expectation)\n",
+    "# Set which Paulis to sample (default is all 16 combinations that have a non-zero expectation)\n",
     "SAMPLES = list(range(16))\n",
     "\n",
     "# Level of optimizations the transpiler uses: There are 4 optimization levels ranging from 0 to 3,\n",
@@ -1196,8 +1187,8 @@
     "\n",
     "    job_ids = []\n",
     "\n",
-    "    with Batch(backend=backend) as batch:\n",
-    "        sampler = Sampler(session=batch)\n",
+    "    with Batch(backend=backend):\n",
+    "        sampler = Sampler()\n",
     "        for job_num in range(nr_jobs):\n",
     "            transpiled_circs = all_transpiled_circs[\n",
     "                num_circuits_per_job * job_num : num_circuits_per_job\n",
@@ -1914,6 +1905,7 @@
     "\n",
     "                        str_r = str(r)\n",
     "                        str_s = str(s)\n",
+    "\n",
     "                        try:\n",
     "                            exp += (\n",
     "                                p_eig\n",
@@ -1925,7 +1917,7 @@
     "                                / 4\n",
     "                                / sign_rho_lkji[samples[i]]\n",
     "                            )\n",
-    "                        except:\n",
+    "                        except KeyError:\n",
     "                            pass\n",
     "\n",
     "        exp_all.append(exp)\n",
@@ -1976,25 +1968,21 @@
     "        for j in range(nr_jobs):\n",
     "            job = service.job(job_ids[j])\n",
     "\n",
-    "            if str(job.status()) == \"JobStatus.DONE\":\n",
-    "                if display is True:\n",
-    "                    print(\n",
-    "                        f\"Retrieving job data: {job_ids[j]}: {j} of {nr_jobs-1}\"\n",
-    "                    )\n",
-    "                result = job.result()\n",
-    "                for i in range(len(result)):\n",
-    "                    counts = get_counts_from_bitarray(result[i].data)\n",
-    "                    # if post_process=='post_process_postproc' or post_process == 'post_process_dyn':\n",
-    "                    #     counts = result[i].data.cr.get_counts()\n",
-    "                    # else:\n",
-    "                    #     counts = result[i].data.cr.get_counts()\n",
-    "                    all_counts.append(counts)\n",
-    "\n",
-    "            else:\n",
+    "            if job.status() != \"DONE\":\n",
     "                print(\n",
     "                    f\"Warning: Job id : {job_ids[j]} returned status of {job.status()} : Adding empty dictionaries\"\n",
     "                )\n",
     "                all_counts += [empty_counts] * num_circuits_per_job\n",
+    "                continue\n",
+    "            if display is True:\n",
+    "                print(\n",
+    "                    f\"Retrieving job data: {job_ids[j]}: {j} of {nr_jobs-1}\"\n",
+    "                )\n",
+    "            result = job.result()\n",
+    "            for i in range(len(result)):\n",
+    "                counts = get_counts_from_bitarray(result[i].data)\n",
+    "                all_counts.append(counts)\n",
+    "\n",
     "            if debug is False:\n",
     "                clear_output(wait=True)\n",
     "    else:\n",
