Add data structure tree of primitive output

--- a/docs/guides/primitive-input-output.ipynb
+++ b/docs/guides/primitive-input-output.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "fcfaaab7-83f3-494a-8dee-67012435ab54",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,8 @@
     "        [SparsePauliOp([\"IZI\"])],\n",
     "        [SparsePauliOp([\"IIZ\"])],\n",
     "    ],\n",
-    "]  # shape (2, 3, 1)"
+    "]\n",
+    "# >> pub result has shape (2, 3, 1)"
    ]
   },
   {
@@ -270,7 +271,7 @@
    "id": "dfbaa52f-be7a-406d-b1d7-950daf90fd7f",
    "metadata": {},
    "source": [
-    "## Overview of primitive results\n",
+    "## Overview of primitive outputs\n",
     "\n",
     "Once one or more PUBs are sent to a QPU for execution and a job successfully completes, the data is returned as a [`PrimitiveResult`](../api/qiskit/qiskit.primitives.PrimitiveResult) container object accessed by calling the `RuntimeJobV2.result()` method. The `PrimitiveResult` contains an iterable list of [`PubResult`](../api/qiskit/qiskit.primitives.PubResult) objects that contain the execution results for each PUB. Depending on the primitive used, these data will be either expectation values and their error bars in the case of the Estimator, or samples of the circuit output in the case of the Sampler.\n",
     "\n",
@@ -278,7 +279,62 @@
     "\n",
     "Each of these `PubResult` objects possess both a `data` and a `metadata` attribute. The `data` attribute is a customized [`DataBin`](../api/qiskit/qiskit.primitives.DataBin) that contains the actual measurement values, standard deviations, and so forth. This `DataBin` has various attributes depending on the shape or structure of the associated PUB as well as the error mitigation options specified by the primitive used to submit the job (for example, [ZNE](./error-mitigation-and-suppression-techniques#zero-noise-extrapolation-zne) or [PEC](./error-mitigation-and-suppression-techniques#probabilistic-error-cancellation-pec)). Meanwhile, the `metadata` attribute contains information about the runtime and error mitigation options used (explained later in the [Result metadata](#result-metadata) section of this page).\n",
     "\n",
-    "Put simply, a single job returns a `PrimitiveResult` object and contains a list of one or more `PubResults`. These `PubResults` are where the measurement data is stored for each of the PUBs that were submitted to the job.\n",
+    "Below is a visual outline of the `PrimitiveResult` data structure:\n",
+    "\n",
+    "<Tabs>\n",
+    "    <TabItem value=\"estimator\" label=\"Estimator Output\">\n",
+    "    ```\n",
+    "    └── PrimitiveResult\n",
+    "        ├── PubResult[0]\n",
+    "        │   ├── metadata\n",
+    "        │   └── data  ## In the form of a DataBin object\n",
+    "        │       ├── evs\n",
+    "        │       │   └── List of estimated expectation values in the shape\n",
+    "        |       |         specified by the first pub\n",
+    "        │       └── stds\n",
+    "        │           └── List of calculated standard deviations in the\n",
+    "        |                 same shape as above\n",
+    "        ├── PubResult[1]\n",
+    "        |   ├── metadata\n",
+    "        |   └── data  ## In the form of a DataBin object\n",
+    "        |       ├── evs\n",
+    "        |       │   └── List of estimated expectation values in the shape\n",
+    "        |       |        specified by the second pub\n",
+    "        |       └── stds\n",
+    "        |           └── List of calculated standard deviations in the\n",
+    "        |                same shape as above\n",
+    "        ├── ...\n",
+    "        ├── ...\n",
+    "        └── ...\n",
+    "    ```\n",
+    "    </TabItem>\n",
+    "    <TabItem value=\"sampler\" label=\"Sampler Output\">\n",
+    "    ```\n",
+    "    └── PrimitiveResult\n",
+    "        ├── PubResult[0]\n",
+    "        │   ├── metadata\n",
+    "        │   └── data  ## In the form of a DataBin object\n",
+    "        │       ├── NAME_OF_CLASSICAL_REGISTER\n",
+    "        │       │   └── BitArray of count data (default is 'meas')\n",
+    "        |       |\n",
+    "        │       └── NAME_OF_ANOTHER_CLASSICAL_REGISTER\n",
+    "        │           └── BitArray of count data (exists only if more than one\n",
+    "        |                 ClassicalRegister was specified in the circuit)\n",
+    "        ├── PubResult[1]\n",
+    "        |   ├── metadata\n",
+    "        |   └── data  ## In the form of a DataBin object\n",
+    "        |       └── NAME_OF_CLASSICAL_REGISTER\n",
+    "        |           └── BitArray of count data for second pub\n",
+    "        ├── ...\n",
+    "        ├── ...\n",
+    "        └── ...\n",
+    "    ```\n",
+    "    </TabItem>\n",
+    "</Tabs>\n",
+    "\n",
+    "Put simply, a single job returns a `PrimitiveResult` object and contains a list of one or more `PubResult`s. These `PubResult` objects are then where the measurement data is stored for each PUB that was submitted to the job.\n",
+    "\n",
+    "Each `PubResult` possesses different formats and attributes based on the type of primitive that was used for the job. And the specifics are explained below.\n",
     "\n",
     "### Estimator output\n",
     "\n",
