Update visualize results

--- a/docs/guides/local-testing-mode.ipynb
+++ b/docs/guides/local-testing-mode.ipynb
@@ -46,7 +46,8 @@
     "\n",
     "\n",
     "<Admonition type=\"note\" title=\"Notes\">\n",
-    "You can specify all Qiskit Runtime options in local testing mode.  However, all options except shots are ignored when run on a local simulator.\n",
+    "- You can specify all Qiskit Runtime options in local testing mode.  However, all options except shots are ignored when run on a local simulator.\n",
+    "- It is recommended that you install Qiskit Aer before using fake backends or Aer simulators by running `pip install qiskit-aer`\n",
     "</Admonition>\n",
     "\n",
     "\n",
