Update listed preset passmanager options

--- a/docs/guides/common-parameters.ipynb
+++ b/docs/guides/common-parameters.ipynb
@@ -273,7 +273,7 @@
     "\n",
     "* `optimization_method` (str) - The plugin to use for the optimization stage.\n",
     "\n",
-    "* `routing_method` (str) - Name of routing pass (`basic`, `lookahead`, `stochastic`, `sabre`, `none`). This can also be the external plugin name to use for the routing stage.\n",
+    "* `routing_method` (str) - Name of routing pass (`basic`, `lookahead`, `default`, `sabre`, `none`). This can also be the external plugin name to use for the routing stage.\n",
     "\n",
     "* `scheduling_method` (str) - Name of scheduling pass. This can also be the external plugin name to use for the scheduling stage.\n",
     "  * `as_soon_as_possible`: Schedule instructions greedily: as early as possible on a qubit resource (alias: `asap`).\n",
