--- a/docs/guides/set-optimization.ipynb
+++ b/docs/guides/set-optimization.ipynb
@@ -61,14 +61,14 @@
     "      <Td>\n",
     "        No optimization: typically used for hardware characterization\n",
     "        - Basic translation\n",
-    "        - Layout/Routing: `TrivialLayout`, where it selects the same physical qubit numbers as virtual and inserts SWAPs to make it work (using `StochasticSwap`)\n",
+    "        - Layout/Routing: `TrivialLayout`, where it selects the same physical qubit numbers as virtual and inserts SWAPs to make it work (using `SabreSwap`)\n",
     "      </Td>\n",
     "    </Tr>\n",
     "    <Tr>\n",
     "      <Td>1</Td>\n",
     "      <Td>\n",
     "        Light optimization:\n",
-    "        -   Layout/Routing: Layout is first attempted with `TrivialLayout`. If additional SWAPs are required, a layout with a minimum number of SWAPs is found by using `SabreSWAP`, then it uses `VF2LayoutPostLayout` to try to select the best qubits in the graph.\n",
+    "        -   Layout/Routing: Layout is first attempted with `TrivialLayout`. If additional SWAPs are required, a layout with a minimum number of SWAPs is found by using `SabreSwap`, then it uses `VF2LayoutPostLayout` to try to select the best qubits in the graph.\n",
     "        -   `InverseCancellation`\n",
     "        -   1Q gate optimization\n",
     "      </Td>\n",
