change orbital rotation convention to match ffsim

--- a/docs/tutorials/improving-energy-estimation-of-a-fermionic-lattice-model-with-sqd.ipynb
+++ b/docs/tutorials/improving-energy-estimation-of-a-fermionic-lattice-model-with-sqd.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "86229d6d-7d24-4e0f-ac56-6b7238aa9db9",
    "metadata": {},
    "outputs": [],
@@ -160,15 +160,21 @@
     "    h1e: np.ndarray, h2e: np.ndarray, orbital_rotation: np.ndarray\n",
     ") -> tuple[np.ndarray, np.ndarray]:\n",
     "    \"\"\"Rotate the orbital basis of a Hamiltonian.\"\"\"\n",
-    "    h1e_rotated = orbital_rotation.T @ h1e @ orbital_rotation\n",
+    "    h1e_rotated = np.einsum(\n",
+    "        \"ab,Aa,Bb->AB\",\n",
+    "        h1e,\n",
+    "        orbital_rotation,\n",
+    "        orbital_rotation.conj(),\n",
+    "        optimize=\"greedy\",\n",
+    "    )\n",
     "    h2e_rotated = np.einsum(\n",
-    "        \"pqrs,pi,qj,rk,sl->ijkl\",\n",
+    "        \"abcd,Aa,Bb,Cc,Dd->ABCD\",\n",
     "        h2e,\n",
     "        orbital_rotation,\n",
+    "        orbital_rotation.conj(),\n",
     "        orbital_rotation,\n",
-    "        orbital_rotation,\n",
-    "        orbital_rotation,\n",
-    "        optimize=True,\n",
+    "        orbital_rotation.conj(),\n",
+    "        optimize=\"greedy\",\n",
     "    )\n",
     "    return h1e_rotated, h2e_rotated\n",
     "\n",
@@ -199,7 +205,7 @@
     "\n",
     "# Rotate to momentum basis\n",
     "orbital_rotation = momentum_basis(norb)\n",
-    "h1e_momentum, h2e_momentum = rotated(h1e, h2e, orbital_rotation)\n",
+    "h1e_momentum, h2e_momentum = rotated(h1e, h2e, orbital_rotation.T.conj())\n",
     "# In the momentum basis, the impurity is placed in the center\n",
     "impurity_index = n_bath // 2"
    ]
