--- a/docs/guides/pulse.ipynb
+++ b/docs/guides/pulse.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "<Admonition type=\"danger\" title='Removal of Pulse Support'>\n",
     "\n",
-    " Pulse-level control on __all__ IBM Quantum&reg; processors has been removed and this tutorial will __not work correctly__ using these QPUs.\n",
+    " Pulse-level control on __all__ IBM Quantum&reg; processors has been removed and the code in this guide will __not work correctly__ using these QPUs.\n",
     "\n",
     " If you were using pulse schedules to execute single and two-qubit rotations, use the new [fractional gates](/guides/fractional-gates) feature. Alternatively, if you would like to simulate pulse schedules for you work, check out the [Qiskit Dynamics](https://qiskit-community.github.io/qiskit-dynamics/) package.\n",
     "\n",
