Dynamic circuits updates

--- a/docs/guides/classical-feedforward-and-control-flow.ipynb
+++ b/docs/guides/classical-feedforward-and-control-flow.ipynb
@@ -44,7 +44,7 @@
     "- The ability to use control flow instructions inside the body of a branch (as in, nested control flow)\n",
     "- Conditional measurements\n",
     "\n",
-    "QPUs released prior to June will not support the current dynamic circuits. To check whether a specific QPU supports dynamic circuits, use this code:\n",
+    "New QPUs released after this deprecation will not support dynamic circuits until the updated features are released. To check whether a specific QPU supports dynamic circuits, use this code:\n",
     "```python\n",
     "# returns True if backend supports dynamic circuits\n",
     "\"dynamic_circuits\" in backend.configuration().supported_features\n",
