--- a/docs/guides/plans-overview.mdx
+++ b/docs/guides/plans-overview.mdx
@@ -1,6 +1,8 @@
 ---
 title: Overview of plans
 description: Overview of the available plans; Standard, Premium, and Open
+isNew: true
+isNewDate: 2025-04-30
 platform: cloud
 ---
 
@@ -11,7 +13,7 @@ platform: cloud
 This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/setup-channel#ibm-cloud)
 </Admonition>
 
-IBM Quantum Platform has Open (free access) and Premium (enterprise subscription) plans, as described below. See [IBM Quantum access plans](https://www.ibm.com/quantum/access-plans) for full details.
+IBM Quantum Platform has Open (free access), pay for usage, and Premium (enterprise subscription) plans, as described below. See [IBM Quantum access plans](https://www.ibm.com/quantum/access-plans) for full details.
 
 If you want access to multiple plans, you can create multiple instances and assign different plans to them.  For example, you can have an Open Plan instance and a Standard Plan instance.
 
@@ -21,11 +23,23 @@ Run your quantum circuits on the world's best QPUs for free (up to 10 minutes qu
 
 This plan is recommended for those who are learning quantum computing and exploring IBM quantum technology.
 
+## Flex Plan
+
+Pre-purchase a certain number of minutes (as _resource units_) to be used for running quantum jobs, to be used within one year of purchase.  You can purchase more minutes at any time.
+
+After purchasing time, you must allocate the minutes to existing or new instances on the Flex plan for your account.  Update allocation limits on the [instances page](https://quantum.cloud.ibm.com/instances) or set the allocation when you [create a new Flex plan instance.](/guides/instances)  If you allocate all of the minutes to existing instances, you can't create a new instance for the Flex plan until you purchase more minutes or remove some minutes from another instance's allocation. See [Set instance allocation limits](allocation-limits) to learn more.
+
+### Resource units
+
+Flex Plan access is sold as _resource units_ (RUs), and you must purchase at least 400 RUs. If you need more than 10,000 RUs, you should consider a Premium Plan subscription instead. If you don't want to purchase 400 RUs, consider the Standard plan instead.
+
+On QPUs with up to 199 qubits, one minute of usage = 1 RU.
+
 ## Standard (Pay-as-you-go) Plan
 
 Run quantum circuits on the world's best QPUs and pay only for the quantum time you use.
 
-This plan is recommended for those who are performing quantum utility research projects and testing business models with flexible access.
+This plan is recommended for those who are performing quantum utility research projects and testing business models with flexible access. If you will be using at least 400 minutes in the next year, it is recommended that you use the Flex plan instead.
 
 ## Premium Plan
 
