--- a/docs/guides/estimate-job-run-time.mdx
+++ b/docs/guides/estimate-job-run-time.mdx
@@ -30,7 +30,7 @@ The usage reported on the dashboard or by using the API is the time a QPU is loc
 <CloudContent>
 Failed or canceled jobs count toward your usage in certain circumstances - see the [Failed and canceled jobs](#failed-job) section for details.
 
-For Standard Plan users, usage determines how much the workload costs. See [Manage cost](/guides/manage-cost) for details.
+For Standard or Flex plan users, usage determines how much the workload costs. See [Manage cost](/guides/manage-cost) for details.
 </CloudContent>
 
 <LegacyContent>
