Handle failed jobs

--- a/docs/tutorials/long-range-entanglement-with-limited-qubit-connectivity.ipynb
+++ b/docs/tutorials/long-range-entanglement-with-limited-qubit-connectivity.ipynb
@@ -1699,9 +1699,12 @@
     "    \"\"\"Resample a single dictionary based on its weights.\"\"\"\n",
     "    keys = list(d.keys())\n",
     "    weights = list(d.values())\n",
-    "    total = sum(weights)\n",
+    "    sum_weights = sum(weights)\n",
     "\n",
-    "    resampled_keys = random.choices(keys, weights=weights, k=total)\n",
+    "    if sum_weights == 0:\n",
+    "        return d\n",
+    "\n",
+    "    resampled_keys = random.choices(keys, weights=weights, k=sum_weights)\n",
     "\n",
     "    # Count the occurrences of each key in the resampled keys\n",
     "    resampled_counts = {}\n",
@@ -1969,11 +1972,15 @@
     "            job = service.job(job_ids[j])\n",
     "\n",
     "            if job.status() == \"RUNNING\":\n",
-    "                raise ValueError(f\"Job id : {job_ids[j]} returned status 'RUNNING', wait for all jobs to complete then try again.\")\n",
-    "            if job.status() != \"DONE\":\n",
     "                raise ValueError(\n",
-    "                    f\"Job id : {job_ids[j]} returned status '{job.status()}'\"\n",
+    "                    f\"Job id : {job_ids[j]} returned status 'RUNNING', wait for all jobs to complete then try again.\"\n",
     "                )\n",
+    "            if job.status() != \"DONE\":\n",
+    "                print(\n",
+    "                    f\"Job id : {job_ids[j]} returned status '{job.status()}'; skipping.\"\n",
+    "                )\n",
+    "                all_counts += [empty_counts] * num_circuits_per_job\n",
+    "                continue\n",
     "            if display is True:\n",
     "                print(\n",
     "                    f\"Retrieving job data: {job_ids[j]}: {j} of {nr_jobs-1}\"\n",
