--- a/docs/tutorials/long-range-entanglement-with-limited-qubit-connectivity.ipynb
+++ b/docs/tutorials/long-range-entanglement-with-limited-qubit-connectivity.ipynb
@@ -115,7 +115,7 @@
    "source": [
     "### Experimental setup\n",
     "\n",
-    "The experiments in this notebook use a predefined 1-D line of qubits with a coupling map that ensures that no shortcuts can be taken."
+    "The experiments in this notebook use a 1-D line of qubits with a coupling map that ensures that no shortcuts can be taken."
    ]
   },
   {
@@ -278,7 +278,9 @@
     "\n",
     "# Set qubit line and coupling map\n",
     "QUBIT_LINE = get_1d_qubit_line(backend.coupling_map)\n",
-    "COUPLING_MAP_1D = coupling_map_from_qubit_line(backend.coupling_map, QUBIT_LINE)\n",
+    "COUPLING_MAP_1D = coupling_map_from_qubit_line(\n",
+    "    backend.coupling_map, QUBIT_LINE\n",
+    ")\n",
     "MAX_POSSIBLE_QUBITS_BTW_CNOT = len(QUBIT_LINE) - 2\n",
     "\n",
     "# Use this duration class to get appropriate durations for dynamic\n",
@@ -643,7 +645,7 @@
     "    c2: Optional[ClassicalRegister] = None,\n",
     "    add_barriers: Optional[bool] = True,\n",
     ") -> QuantumCircuit:\n",
-    "    \"\"\"Generate a CNOT gate between data qubit control_qubit and data qubit target_qubit using Bell Pairs.\n",
+    "    \"\"\"Generate a CNOT gate between data qubit control_qubit and data qubit target_qubit using Bell pairs.\n",
     "\n",
     "    Post processing is used to enable the CNOT gate via the provided classical registers c1 and c2\n",
     "\n",
@@ -892,7 +894,7 @@
     "        c2 (ClassicalRegister) : Default = None. Required if n > 0. Register requires n - k bits\n",
     "        add_barriers (bool) : Default = True. Include barriers before and after long range CNOT\n",
     "\n",
-    "    Note: This approached uses two if_test statements. A better (more performant) approach is\n",
+    "    Note: This approach uses two if_test statements. A better (more performant) approach is\n",
     "    to have the parity values combined into a single classical register and then use a switch\n",
     "    statement. This was done in the associated paper my modifying the qasm file directly. The ability\n",
     "    to use a switch statement via Qiskit in this way is a future release capability.\n",
