--- a/docs/tutorials/long-range-entanglement-with-limited-qubit-connectivity.ipynb
+++ b/docs/tutorials/long-range-entanglement-with-limited-qubit-connectivity.ipynb
@@ -1991,7 +1991,7 @@
     "                )\n",
     "            if job.status() != \"DONE\":\n",
     "                print(\n",
-    "                    f\"Job id : {job_ids[j]} returned status '{job.status()}'; skipping.\"\n",
+    "                    f\"Job id : {job_ids[j]} returned status '{job.status()}'; adding empty dictionaries.\"\n",
     "                )\n",
     "                all_counts += [empty_counts] * num_circuits_per_job\n",
     "                continue\n",
