Update run-jobs-batch.mdx to be more explicit about the wording

--- a/docs/guides/run-jobs-batch.mdx
+++ b/docs/guides/run-jobs-batch.mdx
@@ -21,8 +21,8 @@ service = QiskitRuntimeService()
 
 ## Open a batch
 
-You can open a runtime batch by using the context manager `with Batch(...)` or by initializing the `Batch`
-class. When you start a batch,  you must specify a QPU by passing a `backend` object.  The batch starts when its first job begins execution.
+You can open a runtime batch by using the context manager `with <Batch instance>` or by passing a `Batch` instance to the parameter `mode=` of the primitive.
+When you start a batch,  you must specify a QPU by passing a `backend` object.  The batch starts when its first job begins execution.
 
 
 **Batch class**
