--- a/docs/guides/classical-feedforward-and-control-flow.ipynb
+++ b/docs/guides/classical-feedforward-and-control-flow.ipynb
@@ -44,7 +44,7 @@
     "- The ability to use control flow instructions inside the body of a branch (as in, nested control flow)\n",
     "- Conditional measurements\n",
     "\n",
-    "New QPUs released after this deprecation will not support dynamic circuits until the updated features are released. To check whether a specific QPU supports dynamic circuits, use this code:\n",
+    "New QPUs released after this deprecation will not support dynamic circuits until the updated features are released. Additionally, after the release, QPUs with older control electronics will not support dynamic circuits. To check whether a specific QPU supports dynamic circuits, use this code:\n",
     "```python\n",
     "# returns True if backend supports dynamic circuits\n",
     "\"dynamic_circuits\" in backend.configuration().supported_features\n",
