--- a/docs/guides/plans-overview.mdx
+++ b/docs/guides/plans-overview.mdx
@@ -15,7 +15,7 @@ This documentation is relevant to the new IBM Quantum&reg; Platform. If you need
 
 IBM Quantum Platform has Open (free access), pay for usage, and Premium (enterprise subscription) plans, as described below. See [IBM Quantum access plans](https://www.ibm.com/quantum/access-plans) for full details.
 
-If you want access to multiple plans, you can create multiple instances and assign different plans to them.  For example, you can have an Open Plan instance and a Standard Plan instance.
+If you want access to multiple plans, you can create multiple instances and assign different plans to them.  For example, you can have an Open plan instance and a Standard plan instance.
 
 ## Open Plan
 
@@ -25,15 +25,14 @@ This plan is recommended for those who are learning quantum computing and explor
 
 ## Flex Plan
 
-Pre-purchase a certain number of minutes (as _resource units_) to be used for running quantum jobs, to be used within one year of purchase.  You can purchase more minutes at any time.
+Pre-purchase a certain number of minutes (at least 400) for running quantum jobs, to be used within one year of purchase.  You can purchase more minutes at any time.
 
-After purchasing time, you must allocate the minutes to existing or new instances on the Flex plan for your account.  Update allocation limits on the [instances page](https://quantum.cloud.ibm.com/instances) or set the allocation when you [create a new Flex plan instance.](/guides/instances)  If you allocate all of the minutes to existing instances, you can't create a new instance for the Flex plan until you purchase more minutes or remove some minutes from another instance's allocation. See [Set instance allocation limits](allocation-limits) to learn more.
+After purchasing time, you must allocate the minutes to existing or new instances on the Flex plan for your account.  Set or update allocation limits on the [instances page](https://quantum.cloud.ibm.com/instances) or set the allocation when you [create a new Flex plan instance.](/guides/instances)  If you allocate all of the minutes to existing instances, you can't create a new instance for the Flex plan until you purchase more minutes or remove some minutes from another instance's allocation. See [Set instance allocation limits](allocation-limits) to learn more.
 
-### Resource units
+If you need more than 10,000 minutes, you should consider a Premium plan subscription instead. If you don't want to purchase 400 minutes, consider the Standard plan instead.
 
-Flex Plan access is sold as _resource units_ (RUs), and you must purchase at least 400 RUs. If you need more than 10,000 RUs, you should consider a Premium Plan subscription instead. If you don't want to purchase 400 RUs, consider the Standard plan instead.
+[Contact IBM](https://www.ibm.com/account/reg/us-en/signup?formid=MAIL-quantum) to sign up for a Flex plan.
 
-On QPUs with up to 199 qubits, one minute of usage = 1 RU.
 
 ## Standard (Pay-as-you-go) Plan
 
