--- a/docs/guides/plans-overview.mdx
+++ b/docs/guides/plans-overview.mdx
@@ -27,7 +27,7 @@ This plan is recommended for those who are learning quantum computing and explor
 
 Pre-purchase a certain number of minutes (at least 400) for running quantum jobs, to be used within one year of purchase.  You can purchase more minutes at any time.
 
-After purchasing time, you must allocate the minutes to existing or new instances on the Flex plan for your account.  Set or update allocation limits on the [instances page](https://quantum.cloud.ibm.com/instances) or set the allocation when you [create a new Flex plan instance.](/guides/instances)  If you allocate all of the minutes to existing instances, you can't create a new instance for the Flex plan until you purchase more minutes or remove some minutes from another instance's allocation. See [Set instance allocation limits](allocation-limits) to learn more.
+After purchasing time, you must allocate the minutes to existing or new instances on the Flex plan for your account.  Set or update allocation limits on the [instances page](https://quantum.cloud.ibm.com/instances) or set the allocation when you [create a new Flex plan instance.](/docs/guides/instances)  If you allocate all of the minutes to existing instances, you can't create a new instance for the Flex plan until you purchase more minutes or remove some minutes from another instance's allocation. See [Set instance allocation limits](allocation-limits) to learn more.
 
 If you need more than 10,000 minutes, you should consider a Premium plan subscription instead. If you don't want to purchase 400 minutes, consider the Standard plan instead.
 
