--- a/docs/guides/upgrade-from-open.mdx
+++ b/docs/guides/upgrade-from-open.mdx
@@ -39,7 +39,7 @@ After you upgrade, you can continue to use any instances that you created with y
 
 ## Create a new instance
 
-To use your IBM Cloud Standard plan, create a new [instance](/guides/instances) and assign it to the Standard plan.  <ins>All jobs sent to QPUs by specifying this instance will incur a cost,</ins> except under special circumstances, such as if you have credits that give you free usage.  To use QPUs without incurring a cost, you must use an instance assigned to the Open plan or other free plan, if you have one.
+To use your IBM Cloud Standard plan, create a new [instance](/docs/guides/instances) and assign it to the Standard plan.  <ins>All jobs sent to QPUs by specifying this instance will incur a cost,</ins> except under special circumstances, such as if you have credits that give you free usage.  To use QPUs without incurring a cost, you must use an instance assigned to the Open plan or other free plan, if you have one.
 
 ## Next steps
 
