Apply suggestions from code review
Co-authored-by: abbycross <across@us.ibm.com>

--- a/docs/guides/upgrade-from-open.mdx
+++ b/docs/guides/upgrade-from-open.mdx
@@ -23,7 +23,7 @@ If necessary, follow the steps in the [Set up to use IBM Cloud](./cloud-setup#cl
 <span id="update-cloud-account"></span>
 ## Upgrade your IBM Cloud account
 
-Skip this if you already have an IBM Cloud account with a Pay-As-You-Go plan. All new IBM Cloud accounts are set up with a Pay-As-You-Go plan.
+Skip this if you already have an IBM Cloud account with a Pay-as-you-go plan. All new IBM Cloud accounts are set up with a Pay-as-you-go plan.
 
 You must upgrade your IBM Cloud account in the following circumstances:
 
@@ -39,7 +39,7 @@ After you upgrade, you can continue to use any instances that you created with y
 
 ## Create a new instance
 
-To use your IBM Cloud Standard plan, create a new [instance](/docs/guides/instances) and assign it to the Standard plan.  <ins>All jobs sent to QPUs by specifying this instance will incur a cost,</ins> except under special circumstances, such as if you have credits that give you free usage.  To use QPUs without incurring a cost, you must use an instance assigned to the Open plan or other free plan, if you have one.
+To use your IBM Cloud Standard Plan, create a new [instance](/docs/guides/instances) and assign it to the Standard Plan.  <ins>All jobs sent to QPUs by specifying this instance will incur a cost,</ins> except under special circumstances, such as if you have credits that give you free usage.  To use QPUs without incurring a cost, you must use an instance assigned to the Open plan or other free plan, if you have one.
 
 ## Next steps
 
