--- a/docs/guides/plans-overview.mdx
+++ b/docs/guides/plans-overview.mdx
@@ -13,9 +13,9 @@ platform: cloud
 This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/setup-channel#ibm-cloud)
 </Admonition>
 
-IBM Quantum Platform has Open (free access), pay for usage, and Premium (enterprise subscription) plans, as described below. See [IBM Quantum access plans](https://www.ibm.com/quantum/access-plans) for full details.
+IBM Quantum Platform has Open (free access), pay for usage, and Premium (enterprise subscription) plans, as described below. See [IBM Quantum access plans](https://www.ibm.com/quantum/pricing) for full details.
 
-If you want access to multiple plans, you can create multiple instances and assign different plans to them.  For example, you can have an Open plan instance and a Standard plan instance.
+If you want access to multiple plans, you can create multiple instances and assign different plans to them.  For example, you can have an Open Plan instance and a Standard Plan instance.
 
 ## Open Plan
 
@@ -27,18 +27,18 @@ This plan is recommended for those who are learning quantum computing and explor
 
 Pre-purchase a certain number of minutes (at least 400) for running quantum jobs, to be used within one year of purchase.  You can purchase more minutes at any time.
 
-After purchasing time, you must allocate the minutes to existing or new instances on the Flex plan for your account.  Set or update allocation limits on the [instances page](https://quantum.cloud.ibm.com/instances) or set the allocation when you [create a new Flex plan instance.](/docs/guides/instances)  If you allocate all of the minutes to existing instances, you can't create a new instance for the Flex plan until you purchase more minutes or remove some minutes from another instance's allocation. See [Set instance allocation limits](allocation-limits) to learn more.
+After purchasing time, you must allocate the minutes to existing or new instances on the Flex Plan for your account.  Set or update allocation limits on the [Instances page](https://quantum.cloud.ibm.com/instances) or set the allocation when you [create a new Flex Plan instance.](/docs/guides/instances)  If you allocate all of the minutes to existing instances, you can't create a new instance for the Flex Plan until you purchase more minutes or remove some minutes from another instance's allocation. See [Set instance allocation limits](allocation-limits) to learn more.
 
-If you need more than 10,000 minutes, you should consider a Premium plan subscription instead. If you don't want to purchase 400 minutes, consider the Standard plan instead.
+If you need more than 10,000 minutes, you should consider a Premium Plan subscription instead. If you don't want to purchase 400 minutes, consider the Standard Plan instead.
 
-[Contact IBM](https://www.ibm.com/account/reg/us-en/signup?formid=MAIL-quantum) to sign up for a Flex plan.
+[Contact IBM](https://www.ibm.com/account/reg/us-en/signup?formid=MAIL-quantum) to sign up for a Flex Plan.
 
 
 ## Standard (Pay-as-you-go) Plan
 
 Run quantum circuits on the world's best QPUs and pay only for the quantum time you use.
 
-This plan is recommended for those who are performing quantum utility research projects and testing business models with flexible access. If you will be using at least 400 minutes in the next year, it is recommended that you use the Flex plan instead.
+This plan is recommended for those who are performing quantum utility research projects and testing business models with flexible access. If you will be using at least 400 minutes in the next year, it is recommended that you use the Flex Plan instead.
 
 ## Premium Plan
 
