--- a/docs/guides/instances.mdx
+++ b/docs/guides/instances.mdx
@@ -156,7 +156,7 @@ If you do not specify an instance, the code will select one in the following ord
 
 1. If your account only has access to one instance, it is selected by default.
 2. If your account has access to multiple instances but only one can access the requested QPU, the instance with access is selected. If this instance is not associated with a free plan, a cost might be incurred.
-3. In all other cases, the code selects the first instance other than the Open Plan instance that has access to the quantum computer. If this instance is not associated with a free plan, a cost might be incurred.
+3. In all other cases, the code selects the first instance other than the Open Plan instance that has access to the quantum computer. If this instance is not associated with a free plan, a cost will be incurred, except under special circumstances, such as if you have credits that give you free usage.
 </Admonition>
 
 <span id="add-instance"></span>
