--- a/docs/guides/upgrade-from-open.mdx
+++ b/docs/guides/upgrade-from-open.mdx
@@ -35,11 +35,16 @@ After you upgrade, you can continue to use any instances that you created with y
 1. Go to Manage > [Account](https://cloud.ibm.com/account) in the IBM Cloud console.
 2. Select **Account settings**, and click **Add credit card**.
 3. Enter your payment information and click **Next** to submit your information.
-4. After your payment information is processed, your account is upgraded, and you can explore and access the full IBM Cloud catalog.
+4. After your payment information is processed, your account is upgraded.
+   <Admonition type="note">
+   You will not be charged unless you create a Standard Plan instance and use it to send workloads to QPUs.
+   </Admonition>
 
-## Create a new instance
+## Access your Standard Plan
 
 To use your IBM Cloud Standard Plan, create a new [instance](/docs/guides/instances) and assign it to the Standard Plan.  <ins>All jobs sent to QPUs by specifying this instance will incur a cost,</ins> except under special circumstances, such as if you have credits that give you free usage.  To use QPUs without incurring a cost, you must use an instance assigned to the Open plan or other free plan, if you have one.
+
+It is recommended that you set up a [cost limit](/docs/guides/manage-cost#cost-limit) on the instance and learn about other ways to manage your cost when using the Standard plan.
 
 ## Next steps
 
