--- a/docs/guides/instances.mdx
+++ b/docs/guides/instances.mdx
@@ -98,7 +98,7 @@ The jobs you run and the jobs run by other collaborators in the same instance co
 <CloudContent>
 The jobs you run and the jobs run by other collaborators in the same instance count toward the reported usage for that instance.
 
-You can view an instance's usage on the [Instances](https://quantum.cloud.ibm.com/instances) page, or, for those with the proper authority, the [Analytics](https://quantum.cloud.ibm.com/analytics) page.  Note that the pages might show different usage numbers because The Instance page shows usage in a 28-day rolling window prior to the current timestamp, while the Analytics page uses full day boundaries.
+You can view an instance's usage on the [Instances](https://quantum.cloud.ibm.com/instances) page, or, for those with the proper authority, the [Analytics](https://quantum.cloud.ibm.com/analytics) page.  Note that the pages might show different usage numbers because the Instance page shows usage in a 28-day rolling window prior to the current timestamp, while the Analytics page uses full-day boundaries.
 </CloudContent>
 <LegacyContent>
 If an instance has been marked as "limited" by your administrator (you will see a "**Remaining**" column in the usage area) and the instance exceeds its allocation (defined by your administrator) within the 28-day rolling window, any active workload will continue running (including sessions) but pending workloads will remain in the queue until more time is available. If an instance is not limited and the instance exceeds its allocation, jobs run with that instance are likely to run at a lower priority and experience longer queue times.
